--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Tin nhanh VnExpress - Đọc báo, tin tức online 24h</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="author" href="humans.txt">
     </head>
     <body>
@@ -14,13 +15,17 @@
     		<div class="top-bar">
     			<div class="top-bar-inside">
     				<ul class="contact-info">
-    					<li>0123.888.0123 (HN) - 0129.233.3555 (TP HCM)</li>
+    					<li>
+                            <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
+
+                        0123.888.0123 (HN) - 0129.233.3555 (TP HCM)</li>
     					<li>Liên hệ quảng cáo</li>
     					<li>Like & share</li>
     				</ul>
     				<ul class="user-log">
     					<li>
-    						<input type="text" name="search">
+    						<input type="text" name="search" placeholder="Tìm kiếm">
+                            <i class="fa fa-search" aria-hidden="true"></i>
     					</li>
     					<li>
     						<a href="/">
@@ -35,6 +40,17 @@
     				</ul>
     			</div>
     		</div>
+            <div class="top-banner">
+                <div class="logo">
+                   <img src="http://dummyimage.com/200x100/4d494d/686a82.gif&text=LOGO" alt="placeholder+image">
+                </div>
+                <div class="center-banner">
+                   <img src="http://dummyimage.com/400x100/4d494d/686a82.gif&text=CENTER BANNER" alt="placeholder+image">
+                </div>
+                <div class="right-banner">
+                    <img src="http://dummyimage.com/400x100/4d494d/686a82.gif&text=RIGHT BANNER" alt="placeholder+image">
+                </div>
+            </div>
     	</header>
     	<!-- main content -->
     	<!-- footer        -->
