implement box layout news

--- a/index.html
+++ b/index.html
@@ -51,8 +51,54 @@
                     <img src="http://dummyimage.com/400x100/4d494d/686a82.gif&text=RIGHT BANNER" alt="placeholder+image">
                 </div>
             </div>
+            <nav class="top-nav">
+                <ul class="menu-top">
+                    <li>
+                        <a href="/trang-chu" title="trang chủ"><i class="fa fa-home" aria-hidden="true"></i></a>
+                    </li>
+                    <li>
+                        <a href="/video" title="video">Video</a>
+                    </li>
+                    <li>
+                        <a href="/thoi-su" title="Thời sự">Thời sự</a>
+                    </li>
+                    <li>
+                        <a href="/kinh-te" title="Kinh tế">Kinh tế</a>
+                    </li>
+                    <li>
+                        <a href="/the-thao" title="thể thao">Thể thao</a>
+                    </li>
+                </ul>
+            </nav>
     	</header>
     	<!-- main content -->
+        <div class="main">
+            <article>
+                <img src="http://dummyimage.com/450x300/4d494d/686a82.gif&text=placeholder+image" alt="placeholder+image">
+                <h2>
+                    <a href="#">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                    </a>
+                </h2>
+            </article>
+            <div class="hit-news">
+                <ul>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                </ul>
+            </div>
+            <div class="ads-feature">
+                <img src="http://dummyimage.com/350x100/4d494d/686a82.gif&text=placeholder+image" alt="placeholder+image">
+                <img src="http://dummyimage.com/350x100/4d494d/686a82.gif&text=placeholder+image" alt="placeholder+image">
+                <img src="http://dummyimage.com/350x100/4d494d/686a82.gif&text=placeholder+image" alt="placeholder+image">
+            </div>
+        </div>
     	<!-- footer        -->
         <script src="js/main.js"></script>
     </body>
