modified style home page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                     <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
                     <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
                     <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+                    <li><a href="/">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
                 </ul>
             </div>
             <div class="ads-feature">
